feat(api): provide more Order information for frontend
